Added new recipe tzatziki to recipes Changed title of sandwich.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a>
+    <a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a>
 </body>
 </html>
