--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a>
-    <a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a>
+    <ul>
+        <li><a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a></li>
+        <li><a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a></li>
+        <li><a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer">Pasta</a></li>
+    </ul>
 </body>
 </html>
