Revamp the html pages and add css Restructured the html pages for presentability Created and added css styles to pages Updated README

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pasta</title>
     </head>
 
-    <h1>Sandwich</h1>
-    <img src="../images/pasta.webp" alt="Tasty-looking pasta">
-    <h2>Description</h2>
-    <p>Yummy pasta or something like that.
-        Contains edible stuff.
-        Yum.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 (16 ounce) package cavatappi (corkscrew macaroni)</li>
-        <li>1 cup mayonnaise</li>
-        <li>3 tablespoons lemon juice</li>
-        <li>2 tablespoons honey</li>
-        <li>½ tablespoon garlic powder</li>
-        <li>salt and ground black pepper to taste</li>
-        <li>2 (8 ounce) cans tuna, drained</li>
-        <li>3 stalks celery, sliced</li>
-        <li>1 red onion, diced</li>
-        <li>1 cup peas</li>
-        <li>¼ cup chopped fresh parsley</li>
-        <li>½ cup chopped green olives</li>
-        <li>1 teaspoon lemon juice, or to taste</li>
-        <li>4 hard-boiled eggs, halved</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Bring a large pot of lightly salted water to a boil; cook pasta at a boil until tender yet firm to the bite, 9 to 10 minutes. Drain and transfer to a large bowl. </li>
-        <li>To make the dressing: Whisk mayonnaise, 3 tablespoons lemon juice, honey, garlic powder, salt, and pepper together in a medium bowl. Set aside. </li>
-        <li>Stir tuna, celery, onion, peas, parsley, olives, and 1 teaspoon lemon juice into pasta. Pour dressing over salad, toss until coated, and add hard-boiled eggs on top.  </li>
-    </ol>
-    <h5>Courtesy of https://www.allrecipes.com/recipe/279892/easy-tuna-pasta-salad/</h5>
+    <body>
+        <h1>Sandwich</h1>
+        <img src="../images/pasta.webp" alt="Tasty-looking pasta">
+        <h2>Description</h2>
+        <p>Yummy pasta or something like that.
+            Contains edible stuff.
+            Yum.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 (16 ounce) package cavatappi (corkscrew macaroni)</li>
+            <li>1 cup mayonnaise</li>
+            <li>3 tablespoons lemon juice</li>
+            <li>2 tablespoons honey</li>
+            <li>½ tablespoon garlic powder</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>2 (8 ounce) cans tuna, drained</li>
+            <li>3 stalks celery, sliced</li>
+            <li>1 red onion, diced</li>
+            <li>1 cup peas</li>
+            <li>¼ cup chopped fresh parsley</li>
+            <li>½ cup chopped green olives</li>
+            <li>1 teaspoon lemon juice, or to taste</li>
+            <li>4 hard-boiled eggs, halved</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Bring a large pot of lightly salted water to a boil; cook pasta at a boil until tender yet firm to the bite, 9 to 10 minutes. Drain and transfer to a large bowl. </li>
+            <li>To make the dressing: Whisk mayonnaise, 3 tablespoons lemon juice, honey, garlic powder, salt, and pepper together in a medium bowl. Set aside. </li>
+            <li>Stir tuna, celery, onion, peas, parsley, olives, and 1 teaspoon lemon juice into pasta. Pour dressing over salad, toss until coated, and add hard-boiled eggs on top.  </li>
+        </ol>
+        <hr>
+        <h5>Courtesy of <a href="https://www.allrecipes.com/recipe/279892/easy-tuna-pasta-salad/" target="_blank" rel="noopener noreferrer">https://www.allrecipes.com/recipe/279892/easy-tuna-pasta-salad/</a></h5>
+    </body>
 </html>
