--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a></li>
-        <li><a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a></li>
-        <li><a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer">Pasta</a></li>
-    </ul>
+    <h1 class="center">Odin Recipes</h1>
+    <button><a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a></button>
+    <button><a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a></button>
+    <button><a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer">Pasta</a></button>
+    <hr>
+    <h5>Based on <a href="https://www.theodinproject.com/lessons/foundations-recipes#assignment" target="_blank" rel="noopener noreferrer">https://www.theodinproject.com/lessons/foundations-recipes#assignment</a></h5>
 </body>
 </html>
