--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sandwich</title>
     </head>
 
-    <h1>Sandwich</h1>
-    <img src="../images/sandwich.webp" alt="Tasty-looking egg sandwich">
-    <h2>Description</h2>
-    <p>Yummy sandwich or something like that.
-        Contains eggs and salad and stuff.
-        Yum.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>8 hard-cooked eggs, peeled</li>
-        <li>3 tablespoons mayonnaise</li>
-        <li>1 tablespoon minced jalapeno pepper</li>
-        <li>½ tablespoon honey mustard</li>
-        <li>½ teaspoon black pepper</li>
-        <li>½ teaspoon garlic powder</li>
-        <li>1 pinch salt (Optional)</li>
-        <li>8 slices bread</li>
-        <li>24 leaves baby spinach</li>
-        <li>8 slices tomato</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>In a medium bowl, mash the hard-cooked eggs with a fork or pastry blender. Mix in mayonnaise, honey mustard, and jalapeno. Season with black pepper, garlic powder, and salt. </li>
-        <li>Spread egg mixture on four of the bread slices. Layer with baby spinach leaves and tomato slices, and top with remaining slices of bread. </li>
-    </ol>
-    <h5>Courtesy of https://www.allrecipes.com/recipe/139291/worlds-best-egg-salad-sandwich/</h5>
+    <body>
+        <h1>Sandwich</h1>
+        <img src="../images/sandwich.webp" alt="Tasty-looking egg sandwich">
+        <h2>Description</h2>
+        <p>Yummy sandwich or something like that.
+            Contains eggs and salad and stuff.
+            Yum.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>8 hard-cooked eggs, peeled</li>
+            <li>3 tablespoons mayonnaise</li>
+            <li>1 tablespoon minced jalapeno pepper</li>
+            <li>½ tablespoon honey mustard</li>
+            <li>½ teaspoon black pepper</li>
+            <li>½ teaspoon garlic powder</li>
+            <li>1 pinch salt (Optional)</li>
+            <li>8 slices bread</li>
+            <li>24 leaves baby spinach</li>
+            <li>8 slices tomato</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>In a medium bowl, mash the hard-cooked eggs with a fork or pastry blender. Mix in mayonnaise, honey mustard, and jalapeno. Season with black pepper, garlic powder, and salt. </li>
+            <li>Spread egg mixture on four of the bread slices. Layer with baby spinach leaves and tomato slices, and top with remaining slices of bread. </li>
+        </ol>
+        <hr>
+        <h5>Courtesy of <a href="https://www.allrecipes.com/recipe/139291/worlds-best-egg-salad-sandwich/" target="_blank" rel="noopener noreferrer">https://www.allrecipes.com/recipe/139291/worlds-best-egg-salad-sandwich/</a></h5>
+    </body>
 </html>
