--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tzatziki</title>
     </head>
 
-    <h1>Tzatziki</h1>
-    <img src="../images/tzatziki.webp" alt="Tasty-looking wrap with tzatziki">
-    <h2>Description</h2>
-    <p>Yummy Greek tzatziki sauce.
-        It looka the yummy.
-        Yum.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 English cucumbers</li>
-        <li>2 (16 ounce) containers sour cream</li>
-        <li>1 (16 ounce) container Greek yogurt</li>
-        <li>2 tablespoons minced garlic</li>
-        <li>1 tablespoon extra virgin olive oil</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Peel cucumbers, then grate into a colander. Squeeze out excess water.</li>
-        <li>Mix together sour cream, yogurt, garlic, and olive oil in a large bowl. Stir in cucumbers. Chill at least 30 minutes and up to 2 hours before serving.</li>
-    </ol>
-    <h5>Courtesy of https://www.allrecipes.com/recipe/141046/yia-yias-tzatziki-sauce/</h5>
+    <body>
+        <h1>Tzatziki</h1>
+        <img src="../images/tzatziki.webp" alt="Tasty-looking wrap with tzatziki">
+        <h2>Description</h2>
+        <p>Yummy Greek tzatziki sauce.
+            It looka the yummy.
+            Yum.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 English cucumbers</li>
+            <li>2 (16 ounce) containers sour cream</li>
+            <li>1 (16 ounce) container Greek yogurt</li>
+            <li>2 tablespoons minced garlic</li>
+            <li>1 tablespoon extra virgin olive oil</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Peel cucumbers, then grate into a colander. Squeeze out excess water.</li>
+            <li>Mix together sour cream, yogurt, garlic, and olive oil in a large bowl. Stir in cucumbers. Chill at least 30 minutes and up to 2 hours before serving.</li>
+        </ol>
+        <hr>
+        <h5>Courtesy of <a href="https://www.allrecipes.com/recipe/141046/yia-yias-tzatziki-sauce/" target="_blank" rel="noopener noreferrer">https://www.allrecipes.com/recipe/141046/yia-yias-tzatziki-sauce/</a></h5>
+    </body>
 </html>
