Fix button clicking Changed buttons to spans with appropriate styling
Users can now click the entire button instead of only the text

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1 class="center">Odin Recipes</h1>
-    <button><a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer">Sandwich</a></button>
-    <button><a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer">Tzatziki</a></button>
-    <button><a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer">Pasta</a></button>
+    <a href="recipes/sandwich.html" target="_blank" rel="noopener noreferrer"><span class="button">Sandwich</span></a>
+    <a href="recipes/tzatziki.html" target="_blank" rel="noopener noreferrer"><span class="button">Tzatziki</span></a>
+    <a href="recipes/pasta.html" target="_blank" rel="noopener noreferrer"><span class="button">Pasta</span></a>
     <hr>
     <h5>Based on <a href="https://www.theodinproject.com/lessons/foundations-recipes#assignment" target="_blank" rel="noopener noreferrer">https://www.theodinproject.com/lessons/foundations-recipes#assignment</a></h5>
 </body>
