Hardcode image sizes in html files
Prevents page shifting as images load in

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Sandwich</h1>
-        <img src="../images/pasta.webp" alt="Tasty-looking pasta">
+        <img src="../images/pasta.webp" alt="Tasty-looking pasta" height="750" width="750">
         <h2>Description</h2>
         <p>Yummy pasta or something like that.
             Contains edible stuff.
