--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Sandwich</h1>
-        <img src="../images/sandwich.webp" alt="Tasty-looking egg sandwich">
+        <img src="../images/sandwich.webp" alt="Tasty-looking egg sandwich" height="750" width="750">
         <h2>Description</h2>
         <p>Yummy sandwich or something like that.
             Contains eggs and salad and stuff.
