--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Tzatziki</h1>
-        <img src="../images/tzatziki.webp" alt="Tasty-looking wrap with tzatziki">
+        <img src="../images/tzatziki.webp" alt="Tasty-looking wrap with tzatziki" height="750" width="750">
         <h2>Description</h2>
         <p>Yummy Greek tzatziki sauce.
             It looka the yummy.
